--- a/content/1.guide/0.index.md
+++ b/content/1.guide/0.index.md
@@ -9,3 +9,4 @@ Your new favorite way to build **documentation**.
 ## How to use Docus ?
 
 Learn more on [docus.dev](https://docus.dev).
+Updated From Docu
